--- a/home/my-vue-app/vercel.json
+++ b/home/my-vue-app/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "my-vue-app/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
@@ -14,11 +14,11 @@
     },
     {
       "src": "/(.*)",
-      "dest": "my-vue-app/dist/$1"
+      "dest": "/dist/$1"
     },
     {
       "src": "/.*",
-      "dest": "my-vue-app/dist/index.html"
+      "dest": "/dist/index.html"
     }
   ]
 }
